# speaker-presentation-plugin

./: README.md  __init__.py  pyproject.toml
admin/: Page.jsx
components/: SpeakerComponent.jsx
locales/: en.json  pt-BR.json  pt-PT.json
models/: speaker.py
router/: __init__.py  speaker.py
schemas/: speaker.py  speaker_component.py
services/: speaker_service.py
utils/: media.py  utils.py  uuid.py  uuid_url.py
