[project]
name = "speaker-presentation-plugin"
version = "0.1.0"
dependencies = [
    "SQLAlchemy",
]

[tool.coffeebreak]
identifier = "speaker-presentation-plugin"
name = "Speaker Presentation Plugin"
description = "A plugin for presenting speakers in a conference or event setting."
components_dir = "components"
config_page = true

[tool.coffeebreak.admin_page]
file = "admin/Page.jsx"
route_slug = "speaker-presentation-plugin"
export_name = "default"

[[tool.coffeebreak.components]]
name = "SpeakerComponent"
file = "SpeakerComponent.jsx"
